[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/gui/unit_panel.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/gui/stat_icons.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]

atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=2]

atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )
margin = Rect2( 0, 0, 0, 0 )

[node name="UnitPanel" type="Control"]

visibility/visible = false
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Icon" type="TextureFrame" parent="."]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 88.0
margin/bottom = 8.0
stretch_mode = 4

[node name="ColorFrame" type="ColorFrame" parent="Icon"]

visibility/behind_parent = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.227451, 0.266667, 0.4, 1 )

[node name="Name" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 8.0
margin/right = 4.0
margin/bottom = 4.0
custom_colors/font_color_shadow = Color( 0.0941176, 0.0784314, 0.145098, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HealthBar" type="ProgressBar" parent="Name"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = -16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Label" type="Label" parent="Name/HealthBar"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 0.0
margin/right = 8.0
margin/bottom = 0.0
custom_colors/font_color_shadow = Color( 0.0941176, 0.0784314, 0.145098, 1 )
text = "HP 10/10"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RangeIcon" type="TextureFrame" parent="Name"]

anchor/top = 1
anchor/bottom = 1
hint/tooltip = "Range: Melee"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -18.0
margin/right = 16.0
margin/bottom = -34.0
texture = SubResource( 1 )
stretch_mode = 0

[node name="FlyIcon" type="TextureFrame" parent="Name"]

visibility/visible = false
anchor/top = 1
anchor/bottom = 1
hint/tooltip = "This unit can fly over water."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = -18.0
margin/right = 34.0
margin/bottom = -34.0
texture = SubResource( 2 )
stretch_mode = 0

[node name="Label" type="Label" parent="."]

anchor/left = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -4.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 8.0
custom_colors/font_color_shadow = Color( 0.0941176, 0.0784314, 0.145098, 1 )
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


